style.css
/* ... */
		#menu-secondary div.wrap { border: none; float: right; width: 100%;}
		#menu-secondary.menu { width: auto; float: right; }
		#menu-secondary ul { margin:0; list-style:none; } /* margin: 5px; */
		#menu-secondary ul li { display:inline; /* padding: 7px 0px 7px 10px; */ float: left;}
		#menu-secondary ul li a { padding:0.5em 0 0 0.5em; font-family: 'Merriweather', Georgia, serif;font-size: 80%; font-weight: bold; text-shadow: 1px 1px 1px #000; */ }
		#menu-secondary ul li a:hover,
		#menu-secondary li.current-menu-item a {color: #fff; text-decoration: none; }

			#site-top #menu-secondary { /* Hug bottom of #site-top div. */ 
				/* position: absolute;
				bottom: 0;
				right: 0; */
				border: 1px solid #000;
				width: auto; }

		#main { /* filters go in here */
			clear: both;
			padding: 0;
			border: 1px solid green;
		}
		/* trick to in-flow floated element */
		/* #main:after { 
				content: "."; 
				display: block; 
				height: 0; 
				clear: right; 
				visibility: hidden;	
			} */
		
		#content { /* main! content goes in here. */
			clear: both;
			padding: 0 5px;
		}

		/* trick to in-flow floated element */
		/* #content:after { 
				content: "."; 
				display: block; 
				height: 12px; 
				visibility: hidden;
		} */

			/* no header on home page but design needs orange stripe. */
			.home #main {
				margin-top: 10px; 
				border-top: 0.3em solid #E5AF69;
				border-bottom: 0;
			}

		#sidebar-primary {}

		#sidebar-secondary {}

		/* Subsidiary and Footer Menu - simple | text | menu. */
		#menu-subsidiary div.wrap {text-align: center;}
		#menu-subsidiary ul {margin:0;list-style:none;}
		#menu-subsidiary ul li {display:inline;}
		#menu-subsidiary ul li a {font-family:'Arial Narrow';font-size: 75%;text-transform:uppercase;}
		#menu-subsidiary ul li:not(:first-child)::before {content: '| ';}
		
		#menu-footer div.wrap {text-align: center;}
		#menu-footer ul {margin:0;list-style:none;}
		#menu-footer ul li {display:inline;}
		#menu-footer ul li a {font-family:'Arial Narrow';font-size: 75%;text-transform:uppercase; font-weight: normal;}
		#menu-footer ul li:not(:first-child)::before {content: '| ';}
		
		#sidebar-subsidiary {}

		/* End menus with Orange line over header image */
		.header-image-wrap {
			clear: both;
			position: relative;
			max-width: 100%;
			overflow: hidden;
			margin: 10px 0 0 0; 
			border-top: 4px solid #E5AF69;
			border-bottom: none;
			padding: 0;
			
		}
		
		.header-image {
			height: 154px;
			width: 980px;
			overflow: hidden;
		}
		
		.header-image-text  {
			/* Place text over banner.  */
			position: absolute;
			top: 50%;
			left: 5%;
			/* Style */
			font-family: 'Merriweather', Georgia, serif; 
			font-size: 3rem;
			font-variant: small-caps;
			font-style: bold;
			font-weight: 700;
			letter-spacing: 4pt; 
			margin: -1.5rem 0 0 0;
			text-shadow: 1px 1px 1px #000;
			word-break: keep-all;
		}
			/* Composition Banner -- Goose text */
			.singular-the_works .header-image-text,
			.taxonomy-category-works .header-image-text  {
				top: 55%;
				background-color: rgba(54, 100, 139, 0.25);
				padding: 3px;
				text-shadow: 2px 2px 0px #000;
				border: 1px solid #FFF;
			}
			
			/* Collaborators Banner -- Goose text */
			.singular-page-1895 .header-image-text,
			.taxonomy-post_tag .header-image-text  {
				left: 2%;
				top: 65%;
				letter-spacing: 3pt;
			}
			
			/* Contact Banner -- Goose text */
			.singular-page-12 .header-image-text  {
				left: 1%;
				top: 55%;
				letter-spacing: 3pt;
			}
			
			/* Recordings Banner -- Goose text */
			.singular-the_recordings .header-image-text,
			.taxonomy-category-recordings .header-image-text {
				left: 1%;
				letter-spacing: 2.75pt;
			}

		/* Site bottom.  
		Orange line on top of footer, too. */
		#footer {
			clear: both;
			border: none;
			border-top: 0.2em solid #E5AF69;
			padding: 12px 25px 0 25px;
		}

		#footer a.login-link { color: #36648B; } /* Make footer login link invisible, but still active. */

/**
 * Header
 * --------------------------------------------------------------------------- */
#site-top { /* DS Entire top of site */
	position: relative;
	padding: 0 5px;
	border: 1px solid orange;
}
	
	#site-top:after { /* Trick makes wrapper enclose its floated children. */
		content: "."; 
		display: block; 
		height: 0; 
		clear: both; 
		visibility: hidden;
	}

#header {}

	#branding,
	.sidebar-header-inactive #branding {
		float: left;
		width: auto;
		margin: 0 0 0.5% 0;
		padding: 1% 1% .5% 0;	
		/* border: 1px solid  orange; /* DS TEST */
		text-align: center;
	}

	#site-title {
		font-family: 'Merriweather', Georgia, serif;
		font-size: 44px;
		/* font-size: 4.4rem; */
		font-weight: 300;
		font-style: normal;
		font-variant: small-caps;
		margin: 0 0 5px 0;
		text-shadow: 1px 1px 1px #000;
		white-space: nowrap;
	}
		#site-title,
		#site-title a,
		#site-title a:visited,
		#site-description,
		#site-description a,
		#site-description a:visited { 
			color: #FAEBD7; border-bottom: none;
		}

		#site-title a:hover,
		#site-description a:hover {
			text-decoration: none;
			color: white;
			border-bottom: none;
		}

	#site-description {
		font-family: 'Merriweather', Georgia, serif;
		font-size: 22px;
		/* font-size: 2.2rem; */
		font-weight: 300;
		font-style: normal;
		text-transform: uppercase;
		text-shadow: 1px 1px 1px #000;
		white-space: nowrap;
		margin-bottom: 0;
		margin-top: 0;
	}

/* Horizontal rule */
hr {
	height: 2px;
	background: #FFF;
}

/**
 * Menus
 * --------------------------------------------------------------------------- */

.menu-toggle {}

/* ====== Primary Menu ======

#menu-primary {}

	#menu-primary .wrap {}

		#menu-primary ul {}

			#menu-primary ul ul {}

			#menu-primary li {}
			#menu-primary li.current-menu-item {}

				#menu-primary li a {}
				#menu-primary li a:hover {}
*/
/* ====== Secondary Menu ====== 

#menu-secondary {}

	#menu-secondary .wrap {}

		#menu-secondary ul {}

			#menu-secondary ul ul {}
/* ... */

